--- a/package.json
+++ b/package.json
@@ -6,19 +6,27 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build:css": "postcss src/**/*.css -d dist/"
   },
   "dependencies": {
+    "next": "15.0.3",
+    "postcss": "^8.4.49",
+    "postcss-cli": "^11.0.0",
+    "postcss-pxtorem": "^6.1.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "15.0.3"
+    "eslint-config-next": "15.0.3",
+    "sass": "^1.82.0",
+    "sass-loader": "^16.0.4",
+    "typescript": "^5"
   }
 }
