--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "build:css": "postcss src/**/*.css -d dist/"
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "15.0.3",
