--- a/package.json
+++ b/package.json
@@ -9,19 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "15.0.3",
+    "css-loader": "^7.1.2",
+    "next": "^15.0.4",
     "postcss": "^8.4.49",
     "postcss-cli": "^11.0.0",
     "postcss-pxtorem": "^6.1.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "swiper": "^11.1.15",
+    "webpack": "^5.97.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "sass": "^1.82.0",
