--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "babel-plugin-inline-react-svg": "^2.0.2",
     "css-loader": "^7.1.2",
     "next": "^15.0.4",
     "postcss": "^8.4.49",
