--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "babel-plugin-inline-react-svg": "^2.0.2",
+    "cookie": "^1.0.2",
     "css-loader": "^7.1.2",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "next": "^15.0.4",
+    "nookies": "^2.5.2",
     "postcss": "^8.4.49",
     "postcss-cli": "^11.0.0",
     "postcss-pxtorem": "^6.1.0",
@@ -23,6 +28,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
