--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-plugin-inline-react-svg": "^2.0.2",
     "cookie": "^1.0.2",
     "css-loader": "^7.1.2",
+    "dotenv": "^16.4.7",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "next": "^15.0.4",
