--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-icons": "^5.4.0",
     "swiper": "^11.1.15",
-    "webpack": "^5.97.1",
-    "zustand": "^5.0.2"
+    "webpack": "^5.97.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
