--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookie": "^1.0.2",
     "css-loader": "^7.1.2",
     "dotenv": "^16.4.7",
+    "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "next": "^15.0.4",
