--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^6.4.2",
+    "@mui/material": "^6.4.2",
     "axios": "^1.7.9",
     "babel-plugin-inline-react-svg": "^2.0.2",
     "cookie": "^1.0.2",
@@ -26,7 +31,8 @@
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-icons": "^5.4.0",
     "swiper": "^11.1.15",
-    "webpack": "^5.97.1"
+    "webpack": "^5.97.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
